Fix some lint warnings